tests/errors/sem.type-mismatch.offsetptr-arg2.or
main :: () -> void {
    x := 10;
    offsetptr(&x, true);
};
